Fixed img inside button to be aligned

--- a/homeworks/jose-sanabria/02-css/index.css
+++ b/homeworks/jose-sanabria/02-css/index.css
@@ -136,6 +136,6 @@ a {
   text-align: center;
 }
 
-button img {
+.btn-img{
   vertical-align: middle;
 }
